# OGREFighter

./: .cproject  .project  AIController.h  Actor.cpp  Actor.h  ActorController.h  BehaviorNode.h  CMakeLists.txt  CMakeLists3.txt  DebugDraw.cpp  DebugDraw.h  Disc.cpp  Disc.h  DynamicLineDrawer.cpp  DynamicLineDrawer.h  Game.cpp  Ground.h  Hitbox.h  InputContainer.h  KeyboardController.h  Milestone 4.txt  Ninja.cpp  Ninja.h  NinjaAlternate.cpp  NinjaAlternate.h  README.md  Spark.h  Wall.h  ball.h  gui.cc  gui.h  physics.cpp  physics.h  resources2.cfg  run  state.cpp  state.h
OgreSDK/: ogre_test_settings.xml
OgreSDK/ogre-1.11.2/Samples/Tutorials/: .cproject  .project
OgreSDK/ogre-1.11.2/Samples/Tutorials/Default/: BasicTutorial1.d  BasicTutorial2.d  Bootstrap.d  makefile  sources.mk  subdir.mk
assets/: Cube.mesh  Cube.mesh.xml  DebugLines.material  Material.material  PingPong.material  PingPong.particle  disc.material  disc.mesh  disc.mesh.xml  disc.scene  paddle.blend  paddle.mesh  paddle.mesh.xml  paddle.scene  pizza.mesh  pizza.mesh.xml
bullet3-master/examples/ExBuild/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
bullet3-master/examples/ExampleBrowser/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
